--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
       uses: actions/checkout@v3
     - name: Install dependencies
       run: ${{matrix.shell}} ./ci/actions-install.sh
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+      with:
+        limit-access-to-actor: true
     - name: Build
       run:  ${{matrix.shell}} ./ci/actions-build.sh
     - name: Upload artifact
